tests/NormalTests/paczka1/fuzzy1/44126263.err
Error in line 7: lNcx4Xwb c279 18,6
Error in line 11: lBPPxoQ3 A665 80,3
Error in line 21: lNcx4Xwb A665 63,0
Error in line 26: ZgXpBme A665 77,6
Error in line 18: lBPPxoQ3 S535 24,1
